--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -41,3 +41,6 @@ tauri-plugin-fs = "2"
 libpulse-binding = "2"
 libpulse-simple-binding = "2"
 
+[target.'cfg(target_os = "macos")'.dependencies]
+screencapturekit = "1.5"
+
