--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -42,5 +42,5 @@ libpulse-binding = "2"
 libpulse-simple-binding = "2"
 
 [target.'cfg(target_os = "macos")'.dependencies]
-screencapturekit = "1.2"
+screencapturekit = "~1.2"
 
